[gd_scene format=3 uid="uid://jrskcxltgumd"]

[ext_resource type="Script" uid="uid://yjgqopp3mu6g" path="res://scenes/globals/story_intro.gd" id="1_btpjw"]
[ext_resource type="Texture2D" uid="uid://1dluypn0tggp" path="res://assets/visual/backgrounds/story1.jpg" id="1_tuarq"]
[ext_resource type="Texture2D" uid="uid://bqmg1i3tgp04e" path="res://assets/visual/backgrounds/story2.jpg" id="2_shopj"]
[ext_resource type="Texture2D" uid="uid://on6a6wjsdsq8" path="res://assets/visual/backgrounds/story3.jpg" id="3_a0a33"]
[ext_resource type="Texture2D" uid="uid://dqljhs55taqhv" path="res://assets/visual/sprites/star_stamp.png" id="3_btpjw"]
[ext_resource type="Texture2D" uid="uid://ca28e357xuuew" path="res://assets/visual/backgrounds/story4.jpg" id="4_4h4na"]
[ext_resource type="Texture2D" uid="uid://bkpwc352xjxdp" path="res://assets/visual/backgrounds/story5.jpg" id="5_gwb07"]
[ext_resource type="AudioStream" uid="uid://x6j1rpni2s68" path="res://assets/audio/music/Hyla_story_theme.wav" id="6_a0a33"]
[ext_resource type="Texture2D" uid="uid://lln80tu8jxpr" path="res://assets/visual/backgrounds/hylabanner.jpg" id="9_btpjw"]
[ext_resource type="Texture2D" uid="uid://6xrvijpuibbo" path="res://assets/visual/backgrounds/story6.jpg" id="9_uacg6"]
[ext_resource type="Texture2D" uid="uid://drbquvf558f5i" path="res://assets/visual/backgrounds/story7.jpg" id="10_ycsjx"]
[ext_resource type="FontFile" uid="uid://b53i0n502ixiy" path="res://assets/visual/ui/main_menu/body_font.ttf" id="12_ycsjx"]
[ext_resource type="Theme" uid="uid://b713thhl0tehm" path="res://themes/main_menu.tres" id="13_ycsjx"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gm5bg"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(0, 0, 1)
angle_min = 1.0728835e-05
angle_max = 99.20001
direction = Vector3(0, 0, 0)
initial_velocity_max = 8.98
gravity = Vector3(0, 98, 0)
scale_min = 0.32
scale_max = 0.32

[sub_resource type="LabelSettings" id="LabelSettings_yv40p"]
font = ExtResource("12_ycsjx")
font_size = 35
font_color = Color(0, 0, 0, 1)
outline_size = 11
shadow_size = 14
shadow_color = Color(0, 0, 0, 0.42745098)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a0a33"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4h4na"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(1, 0, 0)
emission_shape_scale = Vector3(1, 0, 1)
direction = Vector3(1, 2.83, 3.6)
spread = 180.0
initial_velocity_max = 1000.0
turbulence_noise_strength = 16.03

[sub_resource type="LabelSettings" id="LabelSettings_btpjw"]
font_size = 123

[node name="StoryIntro" type="Control" unique_id=807440404]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_btpjw")
story_music = ExtResource("6_a0a33")

[node name="BG" type="TextureRect" parent="." unique_id=1423676027]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("9_btpjw")

[node name="star" type="GPUParticles2D" parent="." unique_id=896817987]
position = Vector2(480, 289.99997)
scale = Vector2(13.355649, 10.649005)
amount = 5
texture = ExtResource("3_btpjw")
lifetime = 0.01
speed_scale = 0.1
process_material = SubResource("ParticleProcessMaterial_gm5bg")

[node name="Story1" type="TextureRect" parent="." unique_id=1126958091]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_tuarq")

[node name="Story2" type="TextureRect" parent="." unique_id=650315463]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_shopj")

[node name="Story3" type="TextureRect" parent="." unique_id=1409828390]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("3_a0a33")

[node name="Story4" type="TextureRect" parent="." unique_id=1940303752]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("4_4h4na")

[node name="Story5" type="TextureRect" parent="." unique_id=1897883524]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("5_gwb07")

[node name="Story6" type="TextureRect" parent="." unique_id=481654191]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("9_uacg6")

[node name="Story7" type="TextureRect" parent="." unique_id=1562120926]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("10_ycsjx")

[node name="color_mask" type="ColorRect" parent="." unique_id=1662304092]
layout_mode = 0
offset_left = -114.0
offset_top = -31.0
offset_right = 1805.0
offset_bottom = 1044.0
scale = Vector2(1.0547624, 1.0689713)
color = Color(0.012617188, 0.012617188, 0.012617188, 1)

[node name="Subtitles" type="Control" parent="." unique_id=438702710]
anchors_preset = 0
offset_left = -48.0
offset_top = 39.0
offset_right = -48.0
offset_bottom = 39.0

[node name="paragraph1" type="Control" parent="Subtitles" unique_id=1363087215]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Humankind" type="Label" parent="Subtitles/paragraph1" unique_id=2063499381]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 480.0
offset_top = 920.0
offset_right = 855.0
offset_bottom = 1034.0
text = "Humankind..."
label_settings = SubResource("LabelSettings_yv40p")

[node name="A species" type="Label" parent="Subtitles/paragraph1" unique_id=1725496567]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 733.0
offset_top = 920.0
offset_right = 1450.0
offset_bottom = 967.0
text = "a species that thrived for many moons,"
label_settings = SubResource("LabelSettings_yv40p")

[node name="Has succumb" type="Label" parent="Subtitles/paragraph1" unique_id=83268046]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 588.0
offset_top = 982.0
offset_right = 1350.0
offset_bottom = 1033.0
text = "has succumbed to the error of their ways."
label_settings = SubResource("LabelSettings_yv40p")

[node name="paragraph2" type="Control" parent="Subtitles" unique_id=70647858]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="A new order" type="Label" parent="Subtitles/paragraph2" unique_id=1555944092]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 480.0
offset_top = 920.0
offset_right = 931.0
offset_bottom = 1034.0
scale = Vector2(0.9, 0.9)
text = "A new order has risen..."
label_settings = SubResource("LabelSettings_yv40p")

[node name="more evolved" type="Label" parent="Subtitles/paragraph2" unique_id=1157219299]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 879.0
offset_top = 920.0
offset_right = 1173.0
offset_bottom = 964.0
scale = Vector2(0.9, 0.9)
text = "more evolved..."
label_settings = SubResource("LabelSettings_yv40p")

[node name="more intelligent" type="Label" parent="Subtitles/paragraph2" unique_id=1072516831]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 1141.0
offset_top = 920.0
offset_right = 1516.0
offset_bottom = 964.0
scale = Vector2(0.9, 0.9)
text = "more intelligent..."
label_settings = SubResource("LabelSettings_yv40p")

[node name="more sentient" type="Label" parent="Subtitles/paragraph2" unique_id=1534236190]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 733.0
offset_top = 978.0
offset_right = 1010.77783
offset_bottom = 1022.0
scale = Vector2(0.9, 0.9)
text = "more sentient:"
label_settings = SubResource("LabelSettings_yv40p")

[node name="The Anura" type="Label" parent="Subtitles/paragraph2" unique_id=2120802568]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 985.0
offset_top = 978.0
offset_right = 1194.0
offset_bottom = 1022.0
scale = Vector2(0.9, 0.9)
text = "The Anura."
label_settings = SubResource("LabelSettings_yv40p")

[node name="paragraph3" type="Control" parent="Subtitles" unique_id=1967345954]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Cosmic" type="Label" parent="Subtitles/paragraph3" unique_id=1918698821]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 480.0
offset_top = 920.0
offset_right = 940.0
offset_bottom = 965.0
scale = Vector2(0.87, 0.87)
text = "Cosmic amphibian power,"
label_settings = SubResource("LabelSettings_yv40p")

[node name="commanding" type="Label" parent="Subtitles/paragraph3" unique_id=205915417]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 879.99994
offset_top = 919.99994
offset_right = 1442.0
offset_bottom = 966.99994
scale = Vector2(0.87, 0.87)
text = "commanding the elemements in and"
label_settings = SubResource("LabelSettings_yv40p")

[node name="and around" type="Label" parent="Subtitles/paragraph3" unique_id=1941245966]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 528.0
offset_top = 978.0
offset_right = 743.0
offset_bottom = 1022.0
rotation = 0.0008225808
scale = Vector2(0.87, 0.87)
text = "around us, "
label_settings = SubResource("LabelSettings_yv40p")

[node name="with a force" type="Label" parent="Subtitles/paragraph3" unique_id=369461558]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 706.0
offset_top = 978.00006
offset_right = 1475.1221
offset_bottom = 1023.5518
rotation = 0.0008225808
scale = Vector2(0.86982304, 0.86982304)
text = "with a force that no human can withstand."
label_settings = SubResource("LabelSettings_yv40p")

[node name="paragraph4" type="Control" parent="Subtitles" unique_id=718834617]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="The order" type="Label" parent="Subtitles/paragraph4" unique_id=1688768917]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 480.0
offset_top = 920.0
offset_right = 1215.0
offset_bottom = 1034.0
text = "The Order of Anura are unstoppable..."
label_settings = SubResource("LabelSettings_yv40p")

[node name="unwavering" type="Label" parent="Subtitles/paragraph4" unique_id=760960666]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 1173.0
offset_top = 920.0
offset_right = 1437.0
offset_bottom = 965.0
text = "unwavering..."
label_settings = SubResource("LabelSettings_yv40p")

[node name="uncomprising" type="Label" parent="Subtitles/paragraph4" unique_id=697728767]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 588.0
offset_top = 978.0
offset_right = 1006.0
offset_bottom = 1022.0
text = "and uncompromising..."
label_settings = SubResource("LabelSettings_yv40p")

[node name="all but one" type="Label" parent="Subtitles/paragraph4" unique_id=2139404141]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 1004.0
offset_top = 978.0
offset_right = 1232.0
offset_bottom = 1022.0
text = "all but one."
label_settings = SubResource("LabelSettings_yv40p")

[node name="paragraph5" type="Control" parent="Subtitles" unique_id=1734550449]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Hyla" type="Label" parent="Subtitles/paragraph5" unique_id=918661798]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 480.0
offset_top = 924.0
offset_right = 588.0
offset_bottom = 968.0
scale = Vector2(0.9, 0.9)
text = "Hyla,"
label_settings = SubResource("LabelSettings_yv40p")

[node name="a brilliant" type="Label" parent="Subtitles/paragraph5" unique_id=386791480]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 582.0
offset_top = 924.0
offset_right = 1050.0
offset_bottom = 968.0
rotation = 0.0011701292
scale = Vector2(0.9, 0.9)
text = "a brilliant star-mapper;"
label_settings = SubResource("LabelSettings_yv40p")

[node name="rejected" type="Label" parent="Subtitles/paragraph5" unique_id=1019027086]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 1004.0
offset_top = 924.0
offset_right = 1441.0
offset_bottom = 968.0
scale = Vector2(0.9, 0.9)
text = "rejected from the order"
label_settings = SubResource("LabelSettings_yv40p")

[node name="for his" type="Label" parent="Subtitles/paragraph5/rejected" unique_id=2026731226]
layout_mode = 0
offset_left = -398.88885
offset_top = 64.44446
offset_right = 257.11108
offset_bottom = 108.44446
text = "for his curiousity towards humans."
label_settings = SubResource("LabelSettings_yv40p")

[node name="paragraph6" type="Control" parent="Subtitles" unique_id=1811510219]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Fascinated" type="Label" parent="Subtitles/paragraph6" unique_id=1293439745]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 480.0
offset_top = 920.0
offset_right = 1233.0
offset_bottom = 967.0
text = "Fascinated with something so pleasantly"
label_settings = SubResource("LabelSettings_yv40p")

[node name="harmonious" type="Label" parent="Subtitles/paragraph6" unique_id=1348718181]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 1228.0001
offset_top = 920.0
offset_right = 1489.0001
offset_bottom = 964.0
rotation = 0.0013103291
text = "harmonious..."
label_settings = SubResource("LabelSettings_yv40p")

[node name="music" type="Label" parent="Subtitles/paragraph6" unique_id=1984342776]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 879.0
offset_top = 982.0
offset_right = 1016.0
offset_bottom = 1029.0
text = "music."
label_settings = SubResource("LabelSettings_yv40p")

[node name="paragraph7" type="Control" parent="Subtitles" unique_id=1922093731]
anchors_preset = 0
offset_left = -96.0
offset_top = -178.0
offset_right = -56.0
offset_bottom = -138.0
scale = Vector2(1.2, 1.2)

[node name="Without the order" type="Label" parent="Subtitles/paragraph7" unique_id=1585758069]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 485.0
offset_top = 921.0
offset_right = 1053.0
offset_bottom = 965.0
scale = Vector2(0.7, 0.7)
text = "Without the order, he is weak,"
label_settings = SubResource("LabelSettings_yv40p")

[node name="But nothing is" type="Label" parent="Subtitles/paragraph7" unique_id=1374619041]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 867.5
offset_top = 921.6667
offset_right = 1482.5
offset_bottom = 965.6667
scale = Vector2(0.7, 0.7)
text = "but nothing is stopping him from"
label_settings = SubResource("LabelSettings_yv40p")

[node name="From recharting" type="Label" parent="Subtitles/paragraph7/But nothing is" unique_id=1853331406]
layout_mode = 0
offset_left = -509.5238
offset_top = 63.09497
offset_right = 302.61896
offset_bottom = 109.29797
scale = Vector2(0.9, 0.9)
text = "re-charting the stars to journey back home,"
label_settings = SubResource("LabelSettings_yv40p")

[node name="One beat" type="Label" parent="Subtitles/paragraph7" unique_id=581521715]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 1016.6665
offset_top = 965.8333
offset_right = 1361.6665
offset_bottom = 1009.8333
rotation = -0.0031667831
scale = Vector2(0.66, 0.66)
text = "one beat at a time."
label_settings = SubResource("LabelSettings_yv40p")

[node name="particles" type="GPUParticles2D" parent="." unique_id=1150720082]
modulate = Color(1, 1, 1, 0)
material = SubResource("ShaderMaterial_a0a33")
position = Vector2(960, 540)
amount = 10
texture = ExtResource("3_btpjw")
lifetime = 0.01
preprocess = 0.37
speed_scale = 0.0
process_material = SubResource("ParticleProcessMaterial_4h4na")

[node name="Music" type="Timer" parent="." unique_id=588905425]
one_shot = true
autostart = true

[node name="Text_timer" type="Timer" parent="." unique_id=771220805]
wait_time = 0.08
autostart = true

[node name="Label_current_song_time" type="Label" parent="." unique_id=181860509]
visible = false
layout_mode = 0
offset_left = 711.0
offset_top = 126.0
offset_right = 1216.0
offset_bottom = 295.0
label_settings = SubResource("LabelSettings_btpjw")

[node name="Skip_timer" type="Timer" parent="." unique_id=430804449]
wait_time = 2.0

[node name="Skip_button" type="Button" parent="." unique_id=239249270]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 1559.0001
offset_top = 968.0
offset_right = 2404.0
offset_bottom = 1276.0
scale = Vector2(0.2895372, 0.2895372)
theme = ExtResource("13_ycsjx")
theme_override_font_sizes/font_size = 81
text = "Skip"

[connection signal="timeout" from="Music" to="." method="_on_music_timeout"]
[connection signal="timeout" from="Text_timer" to="." method="_on_text_timer_timeout"]
[connection signal="timeout" from="Skip_timer" to="." method="_on_skip_timer_timeout"]
[connection signal="button_down" from="Skip_button" to="." method="_on_skip_button_button_down"]
[connection signal="button_up" from="Skip_button" to="." method="_on_skip_button_button_up"]
